Implemented Login Style

--- a/src/shared/style/variables.module.scss
+++ b/src/shared/style/variables.module.scss
@@ -1,11 +1,11 @@
 /* COLORS */
-$color-primary-1: #017bfe;
-$color-primary-2: #065cb8;
-$color-secondary-1: #cf4d10;
-$color-secondary-2: #aaa;
+$color-primary-1: #00E3CC;
+$color-primary-2: #32A89C;
+$color-secondary-1: #44E3D3;
+$color-secondary-2: #009688;
 $color-error: #c2240c;
 $color-info: #1478c7;
-$color-divider: #2e2d2a;
+$color-divider: #00635A;
 
 /* FONT-Colors */
 $color-text-primary: #f3f3f3;
