--- a/src/shared/style/login.scss
+++ b/src/shared/style/login.scss
@@ -1,32 +1,93 @@
-.login-form {
-    &.login-form__input {
-        width: 18em;
-        margin: 1em;
+@import 'variables.module';
 
-        p {
-            color: red;
-            height: 20px;
-        }
-    }
-
-    &.login-form__button {
-        margin: 0;
-        margin-left: 2%;
-        margin-right: 30%;
-    }
-
-    &.login-form__button-wrapper {
-        display: flex;
-        justify-content: flex-start;
+.login {
+    &.login-wrapper {
+        width: 100%;
+        height: 100%;
+        background-color: #00635A;
+        display: inline-flex;
+        justify-content: center;
         align-items: center;
-        margin-top: 5%;
-        height: 82px;
-        width: 30em;
     }
 
-    &.login-form__error {
-        position: absolute;
-        top: 5%;
-        right: 5%;
+    &.login-form {
+        &.login-form__wrapper {
+            display: flex;
+            flex-direction: column;
+            border: 5px solid $color-primary-1;
+            border-radius: 50px;
+            padding: 20px;
+            width: 35rem;
+            height: 45rem;
+        }
+
+        &.login-form__title {
+            display: inline-flex;
+            align-self: center;
+            margin-bottom: 20px;
+        }
+
+        &.login-form__login-wrapper {
+            display: flex;
+            margin-top: 40px;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        &.login-form__input {
+            width: 24rem;
+            margin-bottom: 10px;
+        }
+
+        &.login-form__button-wrapper {
+            display: flex;
+            height: 10rem;
+            width: 100%;
+            flex-direction: row;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+
+        &.login-form__button {
+            height: 4rem;
+            width: 8rem;
+            border-radius: 15px;
+        }
+
+        &.login-form__divider {
+            width: 100%;
+            height: 4rem;
+            display: flex;
+            align-items: center;
+        }
+
+        &.login-form__divider-line1 {
+            width: calc((35rem - 20px) / 2);
+            height: 0px;
+            margin-right: 20px;
+            border: 1px solid $color-text-primary;
+        }
+
+        &.login-form__divider-line2 {
+            width: calc((35rem - 20px) / 2);
+            height: 0px;
+            margin-left: 20px;
+            border: 1px solid $color-text-primary;
+        }
+
+        &.login-form__provider-wrapper {
+            height: 100%;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
+        }
+
+        &.login-form__provider-button {
+            height: 4rem;
+            width: fit-content;
+            border-radius: 10px;
+        }
     }
 }
